--- a/index.css
+++ b/index.css
@@ -3,6 +3,35 @@
     margin: 0;
     padding: 0;
   }
+div.description{
+  margin: 0;
+  padding-top:0px;
+  padding-right: 10px;
+  text-align: right;
+  background-color: #798395;
+}
+/* unvisited link */
+.header a:link {
+  color:white;
+  text-decoration: none;
+}
+
+/* visited link */
+.header a:visited {
+  color: white;
+}
+
+/* mouse over link */
+.header a:hover {
+  color:black;
+}
+
+/* selected link */
+.header a:active{
+  color: black;
+  color: white;
+}
+
 .background{
     width: 100%;
     height: 100vh;
@@ -14,7 +43,9 @@
     justify-content: center;
   }
 
-  nav{
+
+
+nav{
     width: 100%;
     position: absolute;
     top: 0;
@@ -91,41 +122,9 @@ ul.topnav li:not(:nth-child(5)) :hover {
   display: none;
 }
 
-/* Footer */
-.footer {
-  display:inline-block;
-  text-align:right;
-  background-color:#798395;
-  color: white;
-  text-decoration: none;
-  padding: 20px;
-  margin-bottom: 0;
-  margin-top: 15px;
-}
 
 
 
-/* unvisited link */
-.footer a:link {
-  color:white;
-  text-decoration: none;
-}
-
-/* visited link */
-.footer a:visited {
-  color: white;
-}
-
-/* mouse over link */
-.footer a:hover {
-  color:black;
-}
-
-/* selected link */
-.footer a:active{
-  color: black;
-  color: white;
-}
 @media (min-aspect-ratio: 16/9) {
     .back-video{
         width: 100%;
