--- a/career/career.css
+++ b/career/career.css
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #40D3DC;
   }
 
 
@@ -19,7 +20,6 @@
 .background{
     width: 100%;
     height: 100vh;
-    background-color: #f6f6f6;
     position: relative;
     padding: 0 5%;
     display: flex;
