--- a/university/university.css
+++ b/university/university.css
@@ -82,7 +82,7 @@ nav.logo{
     height: 500px;
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 5px 5px 5px 5px grey;
+    box-shadow: 5px 5px 5px 5px black;
   }
   
   .slides{
@@ -158,7 +158,7 @@ nav.logo{
   }
   
   .navigation-auto div{
-    border: 2px solid black;
+    border: 2px solid  white;
     padding: 5px;
     border-radius: 10px;
     transition: 1s;
@@ -169,7 +169,7 @@ nav.logo{
   }
   
   #radio1:checked ~ .navigation-auto .auto-btn1{
-    background: black;
+    background: white;
   }
   
   #radio2:checked ~ .navigation-auto .auto-btn2{
@@ -177,7 +177,7 @@ nav.logo{
   }
   
   #radio3:checked ~ .navigation-auto .auto-btn3{
-    background: black;
+    background: white;
   }
   
   #radio4:checked ~ .navigation-auto .auto-btn4{
