--- a/career/career.css
+++ b/career/career.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #40D3DC;
+    background-color: #0470bf;
   }
 
 
@@ -128,7 +128,7 @@ nav.logo{
   }
   
   .manual-btn:hover{
-    background: #40D3DC;
+    background: #0470bf;
   }
   
   #radio1:checked ~ .first{
@@ -169,7 +169,7 @@ nav.logo{
   }
   
   #radio1:checked ~ .navigation-auto .auto-btn1{
-    background: black;
+    background: white;
   }
   
   #radio2:checked ~ .navigation-auto .auto-btn2{
@@ -177,7 +177,7 @@ nav.logo{
   }
   
   #radio3:checked ~ .navigation-auto .auto-btn3{
-    background: black;
+    background: white;
   }
   
   #radio4:checked ~ .navigation-auto .auto-btn4{
@@ -222,6 +222,17 @@ nav.logo{
   max-width: 355px;
   height: 200px;
  }
+
+ .manual-btn{
+  border: 2px solid black;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 2s;
+}
+
+
+
  }
    /* mobile */
    
