--- a/career/career.css
+++ b/career/career.css
@@ -158,7 +158,7 @@ nav.logo{
   }
   
   .navigation-auto div{
-    border: 2px solid black;
+    border: 2px solid #0470bf;
     padding: 5px;
     border-radius: 10px;
     transition: 1s;
