--- a/career/career.css
+++ b/career/career.css
@@ -116,11 +116,11 @@ nav.logo{
   }
   
   .manual-btn{
-    border: 2px solid black;
+    border: 2px solid white;
     padding: 5px;
     border-radius: 10px;
     cursor: pointer;
-    transition: 2s;
+    transition: 1s;
   }
   
   .manual-btn:not(:last-child){
