--- a/index.css
+++ b/index.css
@@ -82,7 +82,7 @@ nav.logo{
   .content h2{
     font-size:160px ;
     color: white;
-    font-weight:600 ;
+  
     transition: 0.5s;
   }
 
@@ -91,7 +91,7 @@ nav.logo{
     color: transparent;
   }
 
-.content a{
+.content a{ 
     text-decoration:none ;
     display: inline-block;
     color: white;
@@ -102,6 +102,11 @@ nav.logo{
     margin-top: 20px;
     margin-bottom: 0;
     padding-bottom: 15px;
+    transition: 0.5s;
+}
+.content a:hover{
+  -webkit-text-stroke: 2px white;
+  color: transparent;
 }
 ul.topnav li:not(:nth-child(5)) :hover {
     border:2px solid white;
