--- a/index.css
+++ b/index.css
@@ -1,98 +1,105 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-  }
-div.description{
-  margin: 0;
-  padding-top:0px;
-  padding-right: 10px;
-  text-align: right;
-  background-color: #798395;
 }
+
+div.description {
+    margin: 0;
+    padding-top: 0px;
+    padding-right: 10px;
+    text-align: right;
+    background-color: #798395;
+}
+
+
 /* unvisited link */
+
 .header a:link {
-  color:white;
-  text-decoration: none;
+    color: white;
+    text-decoration: none;
 }
+
 
 /* visited link */
+
 .header a:visited {
-  color: white;
+    color: white;
 }
+
 
 /* mouse over link */
+
 .header a:hover {
-  color:black;
+    color: black;
 }
+
 
 /* selected link */
-.header a:active{
-  color: black;
-  color: white;
+
+.header a:active {
+    color: black;
+    color: white;
 }
 
-.background{
+.background {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(12,3,51,0.3),rgba(12,3,51,0.3));
+    background-image: linear-gradient(rgba(12, 3, 51, 0.3), rgba(12, 3, 51, 0.3));
     position: relative;
     padding: 0 5%;
     display: flex;
     align-items: center;
     justify-content: center;
-  }
+}
 
-
-
-nav{
+nav {
     width: 100%;
     position: absolute;
     top: 0;
     left: 0;
     padding: 20px 8%;
-    display: flex; 
+    display: flex;
     align-items: center;
-    justify-content:space-between;
-  }
-  
-nav.logo{
+    justify-content: space-between;
+}
+
+nav.logo {
     width: 80px;
-  }
+}
 
-  nav ul li{
+nav ul li {
     list-style: none;
-     display: inline; 
+    display: inline;
     margin-left: 40px;
-  }
+}
 
-
-  nav ul li a{
+nav ul li a {
     text-decoration: none;
     color: white;
     font-size: 17px;
     font-weight: bold;
-  }
-  .content{
+}
+
+.content {
     text-align: center;
     padding-bottom: 0;
     margin-bottom: 0;
-  }
+}
 
-  .content h2{
-    font-size:160px ;
+.content h2 {
+    font-size: 160px;
     color: white;
-  
     transition: 0.5s;
-  }
+}
 
-  .content h2:hover{
+.content h2:hover {
     -webkit-text-stroke: 2px white;
     color: transparent;
-  }
+}
 
-.content a{ 
-    text-decoration:none ;
+.content a {
+    text-decoration: none;
     display: inline-block;
     color: white;
     font-size: 24px;
@@ -104,18 +111,20 @@ nav.logo{
     padding-bottom: 15px;
     transition: 0.5s;
 }
-.content a:hover{
-  -webkit-text-stroke: 2px white;
-  color: transparent;
+
+.content a:hover {
+    -webkit-text-stroke: 2px white;
+    color: transparent;
 }
+
 ul.topnav li:not(:nth-child(5)) :hover {
-    border:2px solid white;
-    background-color:transparent;
+    border: 2px solid white;
+    background-color: transparent;
     color: black;
     border-radius: 20px;
     padding: 14px 20px;
-  }
-  
+}
+
 .back-video {
     position: absolute;
     right: 0;
@@ -123,82 +132,68 @@ ul.topnav li:not(:nth-child(5)) :hover {
     z-index: -1;
     width: 100%;
 }
+
 .topnav .dropdownicon {
-  display: none;
+    display: none;
 }
 
-
-
-
 @media (min-aspect-ratio: 16/9) {
-    .back-video{
+    .back-video {
         width: 100%;
         height: auto;
     }
 }
 
 @media (max-aspect-ratio: 16/9) {
-    .back-video{
-        width:auto;
+    .back-video {
+        width: auto;
         height: 100%;
     }
 }
 
+
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 
-  
-@media screen  and (max-width: 800px) {
- 
- 
-   div.content h2{
-      width: 100%;
-      font-size: 90px;
+@media screen and (max-width: 800px) {
+    div.content h2 {
+        width: 100%;
+        font-size: 90px;
     }
-
 }
-  /* mobile */
-  
-  @media screen and (max-width: 680px) {
-   
-    .back-video, .content{
-      opacity: 0.6;
+
+
+/* mobile */
+
+@media screen and (max-width: 680px) {
+    .back-video,
+    .content {
+        opacity: 0.6;
     }
-
-
-
     .topnav a {
-      float: none;
-      width: 100%;
+        float: none;
+        width: 100%;
     }
-   
     ul.topnav li:not(:nth-child(1)) {
-        display:none;
-  }
+        display: none;
+    }
     ul.topnav li.dropdownicon {
-    display: block;
-    float: right;
-  }
-  
-  ul.topnav.responsive li.dropdownicon{
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
-  
-  
-  
-  ul.topnav.responsive{
-    position: relative;
-  }
-  
-  ul.topnav.responsive li {
-    display: inline;
-    float: none;
-  }
-  
-  ul.topnav.responsive li a{
-    display: block;
-    text-align: left;
-  }
-  
-  }
+        display: block;
+        float: right;
+    }
+    ul.topnav.responsive li.dropdownicon {
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+    ul.topnav.responsive {
+        position: relative;
+    }
+    ul.topnav.responsive li {
+        display: inline;
+        float: none;
+    }
+    ul.topnav.responsive li a {
+        display: block;
+        text-align: left;
+    }
+}
